--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,13 +1,13 @@
 /*ESTILOS DO HEADER*/
 
-header .linklogo {
+header .link-logo {
     display: block;
     padding: 20px 25px;
     border-bottom: 1px solid #25cbd3;
 }
 
 header nav ul {
-    padding: 0%;
+    padding: 0;
     text-align: center;
 }
 
@@ -25,15 +25,16 @@ header nav ul li:not(:last-child) {
 }
 
 .menu li a:hover {
-    color: #03f7e2;
+    color: #3bd42d;
     text-decoration: underline;
 }
 
-@media  screen and (min-width:992px) {
-    header{
-        position:relative
+@media screen and (min-width: 992px) {
+    header {
+        position: relative;
     }
-    .menu{
+
+    .menu {
         position: absolute;
         right: 2%;
         top: 18%;
