--- a/public/css/styleglobal.css
+++ b/public/css/styleglobal.css
@@ -1,4 +1,4 @@
-/*ESTILOS GLOBAIS DA PÁGINA*/
+/*ESTILOS GLOBAIS*/
 
 html{
     height: 100px;
@@ -10,4 +10,33 @@ body{
     font-family: sans-serif;
     color: white;
     margin: 0%;
+}
+
+.title {
+    padding: 0 20px;
+    font-size: 1.75em;
+    text-transform: uppercase;
+}
+
+h1.title {
+    margin: 40px auto 20px;
+}
+
+.text-justify {
+    text-align: justify;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.margin-horizontal-20px {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+@media screen and (min-width: 992px) {
+    .width-50pct-desktop {
+        width: 50% !important;
+    }
 }
